Fixed not centered vertically inside button

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -65,9 +65,10 @@ a.btn i {
 }
 
 .buttons{
-  display: block;
+  display: flexbox;
   margin: auto; 
   width: 270px; 
+  height: 30px;
   font-weight: bold;
   font-family: "Google Sans",arial,sans-serif;
   letter-spacing: 0.25px;
@@ -75,6 +76,9 @@ a.btn i {
   white-space: nowrap;
   color: #ffffff;
   text-align: center;
+  border-radius: 4px;
+  padding: 4px 0px;
+  /* align-items: center; */
   /* align-items: center;
   justify-content: center; */
     /* 
@@ -87,7 +91,6 @@ a.btn i {
   vertical-align:middle;
   text-align: center;
   text-decoration: none;
-  border-radius: 4px;
   cursor: pointer;
    */
   /* margin-left: auto;
